# OpenHAT

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTORS  LICENSE  README.md  appveyor.yml  mkdocs.yml
docs/: index.md  main.css  openhatd.md
docs/images/source/: application_example.dia
libraries/: readme.txt
openhatd/: .gitignore  CMake-rpi  CMakeLists.txt  Doxyfile  make-rpi.sh  makefile  mkdocs.yml  openhatd.sln  release.sh
openhatd/docs/: complex_example_1.ini  complex_example_2.ini  concepts.md  configuration.md  contributing.md  deployment.md  development.md  download.md  home_automation_tips.html  implementation_notes.md  index.md  introduction.html  ports.md  release_plan.md  setup_ubuntucore.md
openhatd/docs/appliances/: xiaomi_mi_robovac.md
openhatd/docs/doxygen/: index.md
openhatd/docs/plugins/automation/: fritzbox_plugin.md
openhatd/docs/ports/: aggregator_port.md  assignment_port.md  basic_ports.md  counter_port.md  error_detector_port.md  exec_port.md  file_port.md  logic_port.md  pulse_port.md  selector_port.md  test_port.md  trigger_port.md
openhatd/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
openhatd/nbproject/private/: configurations.xml  private.xml
openhatd/plugins/: CMakeLists.inc  CMakeLists.txt  doxygen.dox  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/ArducomPlugin/: ArducomPlugin.cpp  ArducomPlugin.vcxproj  CMakeLists.txt  makefile-rpicc
openhatd/plugins/FritzBoxPlugin/: FritzBoxPlugin.cpp  FritzBoxPlugin.vcxproj  FritzBoxPlugin.vcxproj.filters  example.ini  makefile  makefile-i386  makefile-rpicc  readme.txt
openhatd/plugins/FroniusPlugin/: FroniusPlugin.cpp  FroniusPlugin.vcxproj  FroniusPlugin.vcxproj.filters  makefile  makefile-rpicc
openhatd/plugins/MQTTPlugin/: CMakeLists.txt  MQTTPlugin.cpp  MQTTPlugin.vcxproj  makefile
openhatd/plugins/WeatherPlugin/: WeatherPlugin.cpp  WeatherPlugin.vcxproj  WeatherPlugin.vcxproj.filters  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/WebServerPlugin/: CMakeLists.txt  WebServerPlugin.cpp  WebServerPlugin.vcxproj  WebServerPlugin.vcxproj.filters  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/WebServerPlugin/webdocroot/: index.html  strings.js  units.json
openhatd/plugins/WindowPlugin/: WindowPlugin.cpp  WindowPlugin.vcxproj  WindowPlugin.vcxproj.filters  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/automation/: doxygen.dox
openhatd/plugins/automation/FritzBoxPlugin/: FritzBoxPlugin.cpp  FritzBoxPlugin.vcxproj  example.ini  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/automation/MQTTPlugin/: MQTTPlugin.cpp  MQTTPlugin.vcxproj  makefile  makefile-rpicc
openhatd/plugins/automation/WeatherPlugin/: WeatherPlugin.cpp  WeatherPlugin.vcxproj  WeatherPlugin.vcxproj.filters  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/automation/WeatherPlugin/weewx/: weewx.conf
openhatd/plugins/automation/WindowPlugin/: WindowPlugin.cpp  WindowPlugin.vcxproj  WindowPlugin.vcxproj.filters  makefile-i386
openhatd/plugins/linux_test/: CMakeLists.txt  linux_test.cpp  makefile  makefile-i386  makefile-rpicc
openhatd/plugins/rpi/RemoteSwitch/: CMakeLists.txt  RemoteSwitch.cpp  makefile  makefile-rpicc  rpi_remoteswitch.cpp
openhatd/plugins/rpi/doc/: MiniBian with OpenHAT.txt  fstab.example
openhatd/plugins/rpi/gertboard/: CMakeLists.txt  gertboard.cpp  makefile  makefile-rpicc  rpi_gertboard.cpp
openhatd/plugins/rpi/gertboard/AtmegaPortExpander/: uart.h
openhatd/plugins/rpi/gertboard/AtmegaPortExpander/timer0/: timer0.c
openhatd/plugins/windows_test/: windows_test.cpp  windows_test.vcxproj  windows_test.vcxproj.filters
openhatd/src/: .gitignore  AbstractOpenHAT.cpp  AbstractOpenHAT.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ExecPort.cpp  ExecPort.h  ExpressionPort.cpp  ExpressionPort.h  LinuxOpenHAT.cpp  LinuxOpenHAT.h  OPDI.cpp  OPDI.h  OPDI_Ports.cpp  OPDI_Ports.h  Ports.cpp  Ports.h  SunRiseSet.cpp  TimerPort.cpp  TimerPort.h  TypeGUIDs.h  WindowsOpenHAT.cpp  WindowsOpenHAT.h  common.mk  hello-world.ini  makefile  makefile-i386  opdi_configspecs.h  openhat_linux.cpp  openhat_win.cpp  openhatd.vcxproj  openhatd.vcxproj.filters  release.bat
openhatd/testconfigs/: dev.ini  exectest.bat  exectest.sh  gertboard.ini  influxdb_test.ini  linux_test.ini  test_aggregator.ini  test_assignment.ini  test_counter.ini  test_exec.ini  test_file.ini  test_logic.ini  test_pulse.ini  test_trigger.ini  testconfig.ini  weather_test.ini  win_test.ini  window_test.ini  xiaomi_mi_robovac.ini
openhatd/testconfigs/automatic/: readme.txt
openhatd/upstart/: openhatd.conf
src/libraries/rpi/: readme.txt
src/openhat/openhatd/: makefile
src/openhat/openhatd/doc/: index.html  index.md
src/openhat/openhatd/openhatd/: AbstractOpenHAT.cpp  ExecPort.cpp  ExpressionPort.cpp  ExpressionPort.h  LinuxOpenHAT.h  OpenHATConfigurationFile.h  Ports.h  ReadMe.txt  SunRiseSet.h  TimerPort.cpp  TimerPort.h  WindowsOpenHAT.cpp  WindowsOpenHAT.h  (+3 more)
src/openhatd/: .gitignore  mkdocs.yml
src/openhatd/doc/: complex_example_2.ini
src/openhatd/docs/: complex_example_1.ini  concepts.md  configuration.md  contributing.md  deployment.md  details.md  development.md  download.md  extra.css  feedback.md  index.md  ports.md
src/openhatd/openhatd/: .gitignore  AbstractOpenHAT.cpp  AbstractOpenHAT.h  Configuration.cpp  Configuration.h  ExecPort.cpp  ExecPort.h  ExpressionPort.cpp  ExpressionPort.h  LinuxOpenHAT.cpp  OPDI.cpp  OPDI.h  OPDI_Ports.cpp  OPDI_Ports.h  OpenHATConfigurationFile.cpp  Ports.cpp  Ports.h  SunRiseSet.cpp  TimerPort.cpp  TimerPort.h  VERSION  WindowsOpenHAT.cpp  common.mk  exectest.bat  logging.csv  makefile  makefile-i386  makefile-rpicc  opdi_configspecs.h  openhat_linux.cpp  openhat_win.cpp  openhatd.vcxproj  openhatd.vcxproj.filters  release.bat  stdafx.cpp
src/openhatd/testconfigs/: current.json  dev.ini  influxdb_test.ini  linux_test.ini  testconfig.ini  weather_test.ini  window_test.ini
(+98 files in other folders)
